# riscv-asm-test

./: .gitignore  Dockerfile  MODULE.bazel  README.md  requirements.txt
emulation/: BUILD  conftest.py  emulation.py  test_emul.py
platform/: BUILD
scripts/: entrypoint.sh  project.code-workspace
src/asm/: BUILD  CMakeLists.txt  Makefile  boot.S  main.S
src/asm/cmake/: riscv.cmake
src/asm/gcd/: gcd.S
src/asm/shared/: boot.S  link_script.ld
src/asm/test/: conftest.py  test_emul.py
src/c/: BUILD  CMakeLists.txt  Makefile  gcd.c  gcd.h
src/c/gcd/: gcd.h
src/c/test/: test.cc
toolchain/: BUILD  rv32_bare_metal_toolchain.bzl
workspace/: README.md
workspace/doc/: asm.md  c.md
workspace/src/asm/: CMakeLists.txt  Makefile  sort.s
workspace/src/asm/shared/: boot.S  link_script.ld
workspace/src/asm/sort/: sort.S
workspace/src/asm/test/: conftest.py  test_emul.py
workspace/src/c/: CMakeLists.txt
workspace/src/c/gcd/: gcd.c
workspace/src/c/sort/: sort.c  sort.h
workspace/src/c/test/: gcd_test.cc  sort_test.cc
workspace/test_vectors/: test_arrays.json
